--- a/app/scss/spare-parts.scss
+++ b/app/scss/spare-parts.scss
@@ -1,155 +1,212 @@
 @import "app/scss/var";
 
 .spare-parts-page {
-    color: rgb(0, 0, 0);
-    margin-bottom: 120px;
-    &__top{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 135px;
+  color: rgb(0, 0, 0);
+  margin-bottom: 120px;
 
-    }
-    &__input{
-        padding:  26px 70px 26px 70px;
-        display: flex;
-        background: #F2F2F2;
-        width: 100%;
-        margin-right: 26px;
-        svg{
-            margin-right: 26px;
-        }
-        input{
-            width: 100%;
-            border: none;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 24px;
-            outline:none;
-            background: #F2F2F2;
-        }
-    }
-    &__filter{
-        svg{
-            margin-right: 21px;
-        }
-        display: flex;
-        justify-content: center;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 24px;
-        width: 100%;
-        padding: 26px;
-        background-color: #D82329;
-        color: white;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 135px;
+    gap: 25px;
+  }
 
-        cursor: pointer;
-        @include transition();
-        &:hover {
-            @include transformS(1.01);
-        }
-    }
-    // .spare-parts-page__wrapper
+  &__input {
+    padding: 26px 70px 26px 70px;
+    display: flex;
+    background: #F2F2F2;
+    width: 100%;
 
-    &__wrapper {
+    svg {
+      margin-right: 26px;
     }
 
-    // .spare-parts-page__list
+    input {
+      width: 100%;
+      border: none;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 24px;
+      outline: none;
+      background: #F2F2F2;
+    }
+  }
 
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap:130px;
-        align-items: center;
-        margin-bottom: 45px;
-
+  &__filter {
+    svg {
+      margin-right: 21px;
     }
 
-    // .spare-parts-page__card-name
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    width: 100%;
+    padding: 26px;
+    background-color: #D82329;
+    color: white;
 
-    &__card-name {
-        display: flex;
+    cursor: pointer;
+    @include transition();
+
+    &:hover {
+      @include transformS(1.01);
+    }
+  }
+
+  // .spare-parts-page__wrapper
+
+  &__wrapper {
+    width: 100%;
+
+    &_mobile {
+      display: none;
     }
 
-    // .spare-parts-page__category
+    table {
+      border-collapse: collapse !important;
+      border-spacing: 0 !important;
+    }
 
-    &__category {
-        
+    td {
+      padding: 20px 0 20px 0;
+      margin: 0;
+      border-bottom: 1pt solid black;
     }
-    &__category--active{
-        padding:  5px 16px;
-        border: 1px solid #D82329;
-    }
-    // .spare-parts-page__line
+  }
 
-    &__line {
-        border-bottom: 2px solid #1D1717;
-        margin-bottom: 45px;
-    }
+  // .spare-parts-page__list
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 45px;
+
+  }
+
+  // .spare-parts-page__card-name
+
+  &__card-name {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  // .spare-parts-page__category
+
+  &__selected {
+    background: #FFEAEA;
+    border: 1px solid #D82329;
+    padding: 10px 18px;
+    width: max-content;
+  }
+
+  &__category--active {
+    padding: 5px 16px;
+    border: 1px solid #D82329;
+  }
+
+  // .spare-parts-page__line
+
+  &__line {
+    border-bottom: 2px solid #1D1717;
+    margin-bottom: 45px;
+  }
 }
 
 .spare-title-category {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 40px;
-    gap: 94px;
-        // .spare-title-category__name
-        font-size: 20px;
-        line-height: 30px;
-        &__name {
-    
-    margin-left: 70px;
-    
-    display: flex;
-    
-        }
-    
-        // .spare-title-category__category
-    
-        &__category {
-            
-        }
-    }
-    
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  justify-content: space-between;
+  // .spare-title-category__name
+  font-size: 20px;
+  line-height: 30px;
+
+
+  // .spare-title-category__category
+
+  &__category {
+
+  }
+}
+
 
 .card-name-spare {
-    margin-left: 47px;
-    align-items: center;
-    // .card-name-spare__img
+  margin-left: 47px;
+  align-items: center;
+  // .card-name-spare__img
 
-    &__img {
-        margin-right: 50px;
-    }
+  &__img {
+    margin-right: 50px;
+  }
 
-    // .card-name-spare__text
+  // .card-name-spare__text
 
-    &__text {
-    }
+  &__text {
+  }
 }
 
 @media (max-width: 1088px) {
-    .spare-parts-page{
-        &__top{
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 60px;
-
-        }
-        &__input{
-            margin-bottom: 22px;
-        }
+  .spare-parts-page {
+    &__top {
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 60px;
     }
-
+  }
 }
-@media (max-width: 639px) {
-    .spare-parts-page{
-        &__input{
-            padding:  20px 10px;
+
+@media (max-width: 980px) {
+  .spare-parts-page {
+    &__wrapper {
+      display: none;
+      &_mobile {
+        font-family: 'Montserrat', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+
+        display: flex;
+        flex-direction: column;
+        padding: 34px;
+        box-shadow: 10px 10px 20px 20px rgba(230, 230, 230, 0.25);
+      }
+      &__card {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        &-top {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
         }
-        &__filter{
-            padding: 20px 110px;
+        &-params {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
         }
+      }
     }
+  }
+}
+
+@media (max-width: 639px) {
+  .spare-parts-page {
+    &__input {
+      padding: 20px 10px;
+    }
+
+    &__filter {
+      padding: 20px 110px;
+    }
+  }
 }
 
 
