--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -8,12 +8,13 @@
   padding-bottom: 100px;
 
   &__top {
-    margin-bottom: 85px;
+    
   }
 
   // .product-catalog__wrapper
 
   &__wrapper {
+
   }
 
   // .product-catalog__card-lists
@@ -22,13 +23,12 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
-
-
+    margin-top: 85px;
   }
 
-  // .product-catalog__card
 
   &__card {
+    justify-content: space-between;
   }
 }
 
