--- a/app/components/index/main-block.html
+++ b/app/components/index/main-block.html
@@ -8,7 +8,7 @@
         <div class="main-application__text">Мировой лидер в разработке и производстве оборудования для
             струйной цементации, цементации и смесительных установок
         </div>
-        <a class="main-application__button">Оставить заявку</a>
+        <a class="main-application__button popup__button">Оставить заявку</a>
     </section>
     <section class="main-experience">
         <div class="main-experience__inner page-padding">
