--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,6 +30,7 @@
       left: 0;
     }
   }
+
   &.base {
     &.header {
       margin-top: 50px;
@@ -38,10 +39,12 @@
       left: 0;
     }
   }
+
   // .header__inner
   &__mobile {
     display: none;
   }
+
   &__square
   &__inner {
     display: flex;
@@ -120,6 +123,7 @@
     &:hover {
       @include transform();
     }
+
     svg {
       margin-right: 20px;
       min-height: 42px;
@@ -199,22 +203,27 @@
   &__mobile {
     display: none;
   }
+
   &__square
   &__inner {
     display: flex;
   }
+
   &__menu {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 37px;
   }
+
   &__email {
     color: black;
   }
+
   &__phone {
     color: black;
   }
+
   &__menu-logo {
     font-size: 30px;
     line-height: 37px;
@@ -226,6 +235,7 @@
       @include transform();
     }
   }
+
   &__menu-text {
     font-weight: 400;
     font-size: 14px;
@@ -239,6 +249,7 @@
       @include transform();
     }
   }
+
   &__menu-mail {
     color: #000;
 
@@ -258,6 +269,7 @@
       @include transform();
     }
   }
+
   &__menu-phone {
     color: #000;
     display: flex;
@@ -270,6 +282,7 @@
     &:hover {
       @include transform();
     }
+
     svg {
       margin-right: 20px;
       min-height: 42px;
@@ -284,6 +297,7 @@
       color: #000;
     }
   }
+
   &__sub-menu {
     display: flex;
     align-items: center;
@@ -291,8 +305,10 @@
     font-size: 16px;
     gap: 20px;
   }
+
   &__sub-menu-logo {
   }
+
   &__sub-menu-item {
     width: 100%;
     font-weight: 500;
@@ -310,6 +326,7 @@
       color: black;
     }
   }
+
   &__sub-menu-item-square {
     display: flex;
     flex-direction: column;
@@ -324,13 +341,16 @@
       color: black;
     }
   }
+
   &__link {
     a {
-      color: #000!important;
+      color: #000 !important;
     }
   }
+
   &__line {
   }
+
   &__menu-item {
 
   }
@@ -362,6 +382,7 @@
     justify-content: space-between;
     margin-bottom: 20px;
   }
+
   &__menu-logo {
     font-size: 30px;
     line-height: 37px;
@@ -374,6 +395,7 @@
       @include transform();
     }
   }
+
   &__menu-text {
     font-weight: 400;
     font-size: 14px;
@@ -388,6 +410,7 @@
       @include transform();
     }
   }
+
   &__menu-mail {
     color: #FFFFFF;
 
@@ -409,6 +432,7 @@
       @include transform();
     }
   }
+
   &__menu-phone {
     img {
       height: 42px;
@@ -427,6 +451,7 @@
       @include transform();
     }
   }
+
   &__sub-menu {
     padding-bottom: 50px;
     display: flex;
@@ -435,8 +460,10 @@
     gap: 50px;
     font-size: 16px;
   }
+
   &__sub-menu-logo {
   }
+
   &__sub-menu-item {
     width: 100%;
     font-weight: 500;
@@ -449,6 +476,7 @@
     &:hover {
       @include transform();
     }
+
     &-square {
       @include transition();
 
@@ -457,6 +485,7 @@
       }
     }
   }
+
   &__sub-menu-item-square {
     display: flex;
     flex-direction: column;
@@ -471,10 +500,13 @@
       color: black;
     }
   }
+
   &__link {
   }
+
   &__line {
   }
+
   &__menu-item {
   }
 }
@@ -482,6 +514,7 @@
 /*----------------------------------------*/
 .page-padding {
   padding: 0 440px;
+
   &__left {
     padding: 0 0 0 440px;
   }
@@ -495,9 +528,11 @@
   width: 100%;
   height: 100%;
   transition: all 0.5s ease-in-out;
+
   &__back {
     transition: all 0.5s ease-in-out;
   }
+
   &__info {
     transition: all 0.5s ease-in-out;
     position: fixed;
@@ -510,6 +545,7 @@
     min-height: 600px;
     z-index: 1001;
   }
+
   &.open {
     .modal__back {
       position: fixed;
@@ -521,8 +557,139 @@
       height: 100%;
       z-index: 1000;
     }
+
     .modal__info {
       right: 0;
+    }
+  }
+}
+
+.popup {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+
+  &__helper-text {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+
+    cursor: default;
+    color: #000000;
+  }
+
+  &__send {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+
+    text-align: center;
+    color: #FFFFFF;
+
+    border: none;
+    background: #D82329;
+    border-radius: 5px;
+
+    cursor: pointer;
+    padding: 27px;
+  }
+
+  &__input {
+    padding: 20px 30px;
+
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+
+    border: 1px solid #343434;
+    border-radius: 2px;
+    outline: none;
+
+    @include transition();
+    &:focus {
+      border: 1px solid rgba(#343434, 0.5);
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    gap: 27px;
+
+    label {
+      font-family: 'Montserrat', sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      color: #0B2432;
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+  }
+
+  &__cross {
+    width: 50px;
+    height: 50px;
+    background: #E43232;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
+
+    position: absolute;
+    margin-top: -20px;
+    margin-right: -20px;
+    right: 0;
+    top: 0;
+  }
+
+  &__back {
+    transition: all 0.5s ease-in-out;
+  }
+
+  &__base {
+    transition: all 0.5s ease-in-out;
+    position: fixed;
+    top: 50px;
+    left: calc(50% - 518px / 2);
+    padding: 50px;
+    background-color: white;
+    box-shadow: 0 0 50px rgba(21, 60, 83, 0.2);
+    opacity: 0;
+    width: 70%;
+    height: max-content;
+    max-width: 518px;
+    max-height: 687px;
+    z-index: 1001;
+  }
+
+  &.open {
+    .popup__back {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: black;
+      opacity: 0.6;
+      width: 100%;
+      height: 100%;
+      z-index: 1000;
+    }
+
+    .popup__base {
+      opacity: 1;
     }
   }
 }
@@ -530,9 +697,11 @@
 @media (max-width: 1950px) {
   .page-padding {
     padding: 0 250px;
+
     &__left {
       padding: 0 0 0 250px;
     }
+
     &__right {
       padding-right: 250px;
     }
@@ -542,9 +711,11 @@
 @media (max-width: 1800px) {
   .page-padding {
     padding: 0 200px;
+
     &__left {
       padding: 0 0 0 200px;
     }
+
     &__right {
       padding-right: 200px;
     }
@@ -552,17 +723,19 @@
 }
 
 @media (max-width: 1600px) {
-  .header__sub-menu{
+  .header__sub-menu {
     gap: 50px;
   }
-  .footer__sub-menu{
+  .footer__sub-menu {
     gap: 50px;
   }
   .page-padding {
     padding: 0 120px;
+
     &__left {
       padding: 0 0 0 120px;
     }
+
     &__right {
       padding-right: 120px;
     }
@@ -570,18 +743,20 @@
 }
 
 @media (max-width: 1400px) {
-  .header__sub-menu{
+  .header__sub-menu {
     gap: 30px;
   }
 
-  .footer__sub-menu{
+  .footer__sub-menu {
     gap: 30px;
   }
   .page-padding {
     padding: 0 75px;
+
     &__left {
       padding: 0 0 0 75px;
     }
+
     &__right {
       padding-right: 75px;
     }
@@ -589,10 +764,10 @@
 }
 
 @media (max-width: 1200px) {
-  .header__sub-menu{
+  .header__sub-menu {
     gap: 20px;
   }
-  .footer__sub-menu{
+  .footer__sub-menu {
     gap: 20px;
   }
   .header {
@@ -600,9 +775,11 @@
       &-logo {
         margin-right: 30px;
       }
+
       &-text {
         margin-right: 0;
       }
+
       &-mail {
         margin-right: 30px;
       }
@@ -618,9 +795,11 @@
       &-logo {
         margin-right: 30px;
       }
+
       &-text {
         margin-right: 0;
       }
+
       &-mail {
         margin-right: 30px;
       }
@@ -631,22 +810,24 @@
 @media (max-width: 930px) {
   .page-padding {
     padding: 0 30px;
+
     &__left {
       padding: 0 0 0 30px;
     }
+
     &__right {
       padding-right: 30px;
     }
   }
-  .footer__sub-menu{
+  .footer__sub-menu {
     gap: 15px;
   }
 
-  .footer__sub-menu-item{
+  .footer__sub-menu-item {
     //max-width: 150px;
     width: max-content;
   }
-  .footer__sub-menu-item-square{
+  .footer__sub-menu-item-square {
     //max-width: 150px;
     width: max-content;
   }
@@ -656,29 +837,36 @@
       flex-direction: column;
       align-items: start;
     }
+
     &__inner {
       display: none;
     }
+
     &__mobile {
       display: flex;
       width: 100%;
       gap: 4vw;
       justify-content: space-between;
     }
+
     &__menu-logo {
       max-width: 75vw;
     }
+
     &__left {
       display: flex;
       flex-direction: column;
       gap: 25px;
     }
+
     &__menu-logo, &__menu-mail {
       margin-right: 0;
     }
+
     &__right {
       svg {
         @include transition();
+
         &:hover {
           transform: scale(1.2);
         }
@@ -689,25 +877,30 @@
     &__inner {
       padding: 0 15px;
     }
+
     &__link {
       font-weight: 500;
       font-size: 14px;
       line-height: 30px;
     }
+
     &__line {
       height: 10px;
       width: 80px;
     }
+
     &__menu {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 12px;
     }
+
     &__sub-menu {
       flex-wrap: wrap;
+
       &-item-square {
-        .sub-menu-item-square__title img{
+        .sub-menu-item-square__title img {
           display: none;
         }
       }
@@ -718,9 +911,11 @@
 @media (max-width: 630px) {
   .page-padding {
     padding: 0 15px;
+
     &__left {
       padding: 0 0 0 15px;
     }
+
     &__right {
       padding-right: 15px;
     }
@@ -734,15 +929,40 @@
   }
 }
 
+@media (max-width: 550px) {
+  .popup {
+    &__base {
+      padding: 50px 30px;
+      width: 95%;
+      left: 2.5%;
+    }
+
+    &__input {
+      font-size: 14px;
+    }
+
+    &__send {
+      padding: 20px;
+      font-size: 16px;
+    }
+
+    &__helper-text {
+      font-size: 12px;
+    }
+  }
+}
+
 @media (max-width: 480px) {
   .modal__info {
     padding: 35px 20px 35px 30px;
   }
   .page-padding {
     padding: 0 5px;
+
     &__left {
       padding: 0 0 0 5px;
     }
+
     &__right {
       padding-right: 5px;
     }
